--- a/styles.css
+++ b/styles.css
@@ -1,222 +1,225 @@
 @font-face {
-	font-family: 'Segoe UI';
-	src: url('fonts/segoeui.ttf') format('truetype'),
-		 url('fonts/segoeui.woff') format('woff');
+  font-family: 'Segoe UI';
+  src: url('assets/fonts/segoeui.ttf') format('truetype'), url('assets/fonts/segoeui.woff') format('woff');
 }
-
 @font-face {
-	font-family: 'Segoe UI Semibold';
-	src: url('fonts/segoeui-semibold.ttf') format('truetype'),
-		 url('fonts/segoeui-semibold.woff') format('woff');
+  font-family: 'Segoe UI Semibold';
+  src: url('assets/fonts/segoeui-semibold.ttf') format('truetype'), url('assets/fonts/segoeui-semibold.woff') format('woff');
 }
-
 @font-face {
-	font-family: 'Segoe UI Bold';
-	src: url('fonts/segoeui-bold.ttf') format('truetype'),
-		 url('fonts/segoeui-bold.woff') format('woff');
+  font-family: 'Segoe UI Bold';
+  src: url('assets/fonts/segoeui-bold.ttf') format('truetype'), url('assets/fonts/segoeui-bold.woff') format('woff');
 }
-
 @font-face {
-	font-family: 'Kamavor-NA';
-	src: url('fonts/Kamavor-NA.woff') format('woff'),
-		 url('fonts/Kamavor-NA.ttf') format('truetype');
+  font-family: 'Kamavor-NA';
+  src: url('assets/fonts/Kamavor-NA.woff') format('woff'), url('assets/fonts/Kamavor-NA.ttf') format('truetype');
 }
-
 @font-face {
-	font-family: 'Maler';
-	src: url('fonts/Maler.woff') format('woff'),
-		 url('fonts/Maler.ttf') format('truetype');
+  font-family: 'Maler';
+  src: url('assets/fonts/Maler.woff') format('woff'), url('assets/fonts/Maler.ttf') format('truetype');
 }
-
-body {
-	font-family: 'Segoe UI Semibold', sans-serif;
-	margin: 0;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
-
+body,
+figure,
+ul,
+ol,
+dd,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+fieldset {
+  margin: 0;
+  padding: 0;
+}
+a {
+  text-decoration: none;
+}
+button {
+  background-color: transparent;
+}
 img {
-	max-width: 100%;
-	height: auto;
+  max-width: 100%;
+  height: auto;
 }
-
-p {
-	margin: 0;
+input::-moz-focus-inner {
+  border: 0;
+  margin: 0;
+  padding: 0;
 }
-
+ul,
+ol,
+dd {
+  list-style: none;
+}
+a,
+button {
+  cursor: pointer;
+}
+button,
+fieldset {
+  border-width: 0;
+}
+body {
+  font-family: 'Segoe UI Semibold', sans-serif;
+}
 .main-button {
-	background: transparent;
-	border: 1px solid black;
-	border-radius: 24px;
-	padding: 12px 24px;
-	font-size: 16px;
-	line-height: 24px;
-	text-transform: uppercase;
-	cursor: pointer;
-	margin-top: 24px;
+  background: transparent;
+  border: 1px solid black;
+  border-radius: 24px;
+  padding: 12px 24px;
+  font-size: 16px;
+  line-height: 24px;
+  text-transform: uppercase;
+  cursor: pointer;
+  margin-top: 24px;
 }
-
-#header {
-	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.08);
-	margin-bottom: 68px;
-}
-
-header {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	padding: 16px 0;
-}
-
-header ul {
-	margin: 0 82px 0 0;
-	padding: 0;
-	list-style-type: none;
-	display: flex;
-	gap: 24px;
-}
-
-header p {
-	font-size: 24px;
-	line-height: 1;
-	margin-left: 80px;
-}
-
-.container {
-	margin: 0 auto;
-}
-
 .font-normal {
-	font-family: 'Segoe UI', sans-serif;
+  font-family: 'Segoe UI', sans-serif;
 }
-
-.font-semibold {
-	font-family: 'Segoe UI Bold', sans-serif;
-}
-
 .font-bold {
-	font-family: 'Segoe UI Bold', sans-serif;
+  font-family: 'Segoe UI Bold', sans-serif;
 }
-
 .font-kamavor {
-	font-family: 'Kamavor-NA', 'Maler', sans-serif;
+  font-family: 'Kamavor-NA', 'Maler', sans-serif;
 }
-
-.hero {
-	display: flex;
-	gap: 24px;
-	align-items: center;
+.font-kamavor span {
+  color: #377E81;
 }
-
+.text-uppercase {
+  text-transform: uppercase;
+}
+.container {
+  margin: 0 auto;
+}
 .half {
-	flex-basis: 50%;
+  flex-basis: 50%;
 }
-
-.hero p {
-	font-size: 32px;
-	line-height: 64px;
-}
-
-.hero img {
-	display: block;
-	border-radius: 120px 0;
-}
-
-.main-content {
-	display: flex;
-	gap: 24px;
-	margin-top: 80px;
-}
-
-.main-content aside {
-	width: 342px;
-}
-
-.main-content .filtered-content {
-	flex: 1;
-}
-
-.filters-container {
-	background: #FFFFFF;
-	box-shadow: 0 0 8px rgba(0, 0, 0, 0.08);
-	border-radius: 16px;
-	padding: 24px;
-}
-
-.filters-container .filters .category button {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	gap: 8px;
-	background: transparent;
-	border: none;
-	cursor: pointer;
-	font-size: 16px;
-	line-height: 32px;
-	font-family: 'Segoe UI Bold', sans-serif;
-	padding: 8px 0;
-	width: 100%;
-}
-
-.filters-container .filters .category button .label {
-	display: flex;
-	align-items: center;
-	gap: 8px;
-}
-
-.title {
-	display: flex;
-	gap: 8px;
-	justify-content: space-between;
-	align-items: center;
-	border-bottom: 1px solid black;
-	padding-bottom: 8px;
-	margin-bottom: 8px;
-}
-
-.title p {
-	font-size: 16px;
-	line-height: 32px;
-	font-family: 'Segoe UI Bold', sans-serif;
-	text-transform: uppercase;
-}
-
-.main-content .filtered-content {
-	display: grid;
-	grid-template-columns: auto auto auto;
-	gap: 24px;
-}
-
-.main-content .filtered-content div {
-	border-radius: 16px;
-}
-
-.main-content .filtered-content div img {
-	display: block;
-	width: 100%;
-	height: 192px;
-	object-fit: cover;
-}
-
-@media (min-width: 2000px) {
-	header {
-		width: 1920px;
-		margin: 0 auto;
-	}
-}
-
 @media (min-width: 1500px) {
-	.container {
-		width: 1440px;
-	}
+  .container {
+    width: 1440px;
+  }
 }
-
 @media (max-width: 1499px) {
-	.container {
-		width: 1170px;
-	}
+  .container {
+    width: 1170px;
+  }
 }
-
 @media (max-width: 1200px) {
-	.container {
-		width: 100%;
-	}
+  .container {
+    width: 100%;
+  }
+}
+header {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.08);
+  margin-bottom: 68px;
+}
+header .header-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 16px 0;
+}
+header .header-content ul {
+  display: flex;
+  margin: 0 82px 0 0;
+  gap: 24px;
+}
+header .header-content ul li a {
+  color: inherit;
+}
+header .header-content .logo {
+  font-size: 24px;
+  line-height: 2;
+  margin-left: 80px;
+}
+header .header-content .logo a {
+  color: inherit;
+}
+@media (min-width: 2000px) {
+  .header-content {
+    width: 1920px;
+    margin: 0 auto;
+  }
+}
+.hero {
+  display: flex;
+  gap: 24px;
+  align-items: center;
+}
+.hero p {
+  font-size: 32px;
+  line-height: 2;
+}
+.hero img {
+  display: block;
+  border-radius: 120px 0;
+}
+.main-content {
+  display: flex;
+  gap: 24px;
+  margin-top: 80px;
+}
+.main-content aside {
+  width: 342px;
+}
+.main-content .filtered-content {
+  flex: 1;
+  display: grid;
+  grid-template-columns: auto auto auto;
+  gap: 24px;
+}
+.main-content .filtered-content div {
+  border-radius: 16px;
+}
+.main-content .filtered-content div img {
+  display: block;
+  width: 100%;
+  height: 192px;
+  object-fit: cover;
+}
+.filters-container {
+  background: #FFFFFF;
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.08);
+  border-radius: 16px;
+  padding: 24px;
+}
+.filters-container .filters .category button {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 8px;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  font-size: 16px;
+  line-height: 32px;
+  font-family: 'Segoe UI Bold', sans-serif;
+  padding: 8px 0;
+  width: 100%;
+}
+.filters-container .filters .category button .label {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+.title {
+  display: flex;
+  gap: 8px;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid black;
+  padding-bottom: 8px;
+  margin-bottom: 8px;
+}
+.title p {
+  font-size: 16px;
+  line-height: 32px;
 }
