added hover effect to fotter links

--- a/assets/less/footer.less
+++ b/assets/less/footer.less
@@ -61,7 +61,13 @@ footer {
         color: inherit;
         line-height: 32px;
         letter-spacing: 0.64px;
-        padding: 8px 24px;
+        padding: 8px 24px 6px;
+        border-bottom: 2px solid transparent;
+        transition: border-color .25s;
+
+        &:hover {
+          border-color: white;
+        }
       }
     }
   }
